--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ clightningrpc = "0.2.0"
 tonic_lnd = { git = "https://github.com/yzernik/tonic_openssl_lnd", rev = "8c7e3a029a33c4c5fbac061658026cac2d1b190e" }
 hex = "0.4.3"
 configparser = "3.0.2"
+reqwest = { version = "0.11", features = ["blocking", "json"] }
+tokio = { version = "1", features = ["full"] }
+serde_json = "1.0.87"
 
 [dependencies.uuid]
 version = "1.1.2"
