--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ lettre = { version = "0.10.0-beta.2", default-features = false, features = ["bui
 rusoto_core = { version = "0.46", default-features = false, features = ["rustls"] }
 rusoto_ses = { version = "0.46", default-features = false, features = ["rustls"] }
 base64 = "0.13"
+futures-util = "0.3.25"
 
 [dependencies.uuid]
 version = "1.1.2"
